PetCards, search bar css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2024,6 +2024,7 @@ input[type=checkbox]:checked ~ label{
   .petListCard {
     padding: 50px;
     width: 15%;
+    height: fit-content;
   }
   
   .userPet, 
