--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -449,7 +449,7 @@ table {
   margin-bottom: 40px;
   margin-right: 20px;
   margin-left: 20px;
-  width: 20%;
+  width: 25%;
   /* height: fit-content; */
   /* min-height: 720px; */
 }
@@ -1039,11 +1039,6 @@ input[type=checkbox]:checked ~ label{
 .searchFormSection {
   padding: 0px 0px 90px 0px;
 }
-
-/* .searchFormBox,
-.formBox {
-
-} */
 
 .formBox {
   width: 50%;
@@ -1675,7 +1670,6 @@ input[type=checkbox]:checked ~ label{
     padding: unset;
   }
 
-  /* .searchFormBox, */
   .formBox {
     width: 100%;
   }
@@ -1789,7 +1783,6 @@ input[type=checkbox]:checked ~ label{
     padding: unset;
   }
 
-  /* .searchFormBox, */
   .formBox {
     width: 100%;
   }
@@ -1895,6 +1888,10 @@ input[type=checkbox]:checked ~ label{
     padding: 46px;
   }
 
+  .searchFormBox {
+    width: 70%;
+  }
+
 }
 
 
@@ -1909,38 +1906,34 @@ input[type=checkbox]:checked ~ label{
   .navMainList {
     flex-wrap: unset;
   }
+
 }
 
 @media only screen and (min-width: 600px) and (max-width: 700px) {
-  /* .searchFormBox, */
   .formBox {
     width: 90%;
   }
 }
 
 @media only screen and (min-width: 700px) and (max-width: 800px) {
-  /* .searchFormBox, */
   .formBox {
     width: 80%;
   }
 }
 
 @media only screen and (min-width: 800px) and (max-width: 900px) {
-  /* .searchFormBox, */
   .formBox {
     width: 70%;
   }
 }
 
 @media only screen and (min-width: 900px) and (max-width: 1000px)  {
-  /* .searchFormBox, */
   .formBox {
     width: 60%;
   }
 }
 
 @media only screen and (min-width: 1000px) and (max-width: 1100px) {
-  /* .searchFormBox, */
   .formBox {
     width: 50%;
   }
@@ -1976,6 +1969,12 @@ input[type=checkbox]:checked ~ label{
     padding: 46px;
   }
 
+}
+
+@media only screen and (min-width: 800px) and (max-width: 2100px) {
+  .searchFormBox {
+    width: 70%;
+  }
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 2100px) {
@@ -2014,9 +2013,9 @@ input[type=checkbox]:checked ~ label{
     width: 100%;
   }
 
-  /* .searchBox {
-    max-width: 70%;
-  } */
+  .searchFormBox {
+    width: 50%;
+  }
 }
 
 @media only screen and (min-width: 1400px) and (max-width: 2100px) {
