Phone number regex has added to middleware, password text with changing color - Register component

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1082,11 +1082,20 @@ input[type=checkbox]:checked ~ label{
   display: flex;
 }
 
+.acceptedPasswordTextActive,
 .acceptedPasswordText {
   padding-top: 20px;
   font: 400 14px / 1.2 Poppins, sans-serif;
-  color: var(--clr-brown);
   font-style: italic;
+  height: 50px;
+}
+
+.acceptedPasswordTextActive {
+  color: var(--clr-darkgreen);
+}
+
+.acceptedPasswordText {
+  color: var(--clr-brown);
 }
 
 .message {
